--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@react-three/drei": "^10.7.3",
     "@react-three/fiber": "^9.3.0",
+    "@types/next-auth": "^3.15.0",
     "@types/three": "^0.179.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.1.2",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "three": "^0.179.1",
     "zustand": "^5.0.8"
